[package]
description = "Conflux blockgen library"
homepage = "http://www.conflux-chain.io"
license = "GPL-3.0"
name = "blockgen"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2"
cfxcore = { path = "../core" }
cfx-types = { path = "../cfx_types" }
keccak-hash = "0.3.0"
primitives = { path = "../primitives" }
parking_lot = "0.10"
rlp = "0.4.0"
rand = "0.7"
ethkey = { path = "../accounts/ethkey" }
txgen = { path = "../transactiongen" }
log = "0.4"
db = { path = "../db" }
network = { path = "../network" }
secret-store = { path = "../secret_store" }
toml = "0.4"
metrics = { path = "../util/metrics" }
lazy_static = "1.2.0"
