[package]
description = "Conflux blockgen library"
homepage = "http://www.conflux-chain.io"
license = "GPL-3.0"
name = "blockgen"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2"
cfxcore = { path = "../core" }
cfxkey = { path = "../accounts/cfxkey" }
cfx-parameters = { path = "../core/parameters" }
cfx-stratum = { path = "stratum" }
cfx-types = { path = "../cfx_types" }
db = { path = "../db" }
lazy_static = "1.4"
log = "0.4"
metrics = { path = "../util/metrics" }
network = { path = "../network" }
primitives = { path = "../primitives" }
parking_lot = "0.11"
rlp = "0.4.0"
rand = "0.7"
secret-store = { path = "../secret_store" }
toml = "0.4"
txgen = { path = "../transactiongen" }
