[package]
name = "client"
version = "1.0.0"
edition = "2018"

[dependencies]
bigdecimal = "0.1.0"
num-bigint = "0.2.6"
mio = "0.6.8"
clap = "2"
textwrap = "0.9"
toml = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
parking_lot = "0.10"
io = { path = "../util/io" }
cfxkey = { path = "../accounts/cfxkey" }
cfxcore-accounts = { path = "../accounts" }
cfxstore = { path = "../accounts/cfxstore" }
cfx-statedb = { path = "../core/statedb" }
cfx-storage = { path = "../core/storage" }
app_dirs = "1.2.1"
dir = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1"  }
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git", rev="b523017108bb2d571a7a69bd97bc406e63bc7a9d" }
jsonrpc-core = "14.0.0"
jsonrpc-tcp-server = "14.0.0"
jsonrpc-http-server = "14.0.0"
jsonrpc-derive = "14.0.0"
jsonrpc-core-client = "14.0.0"
jsonrpc-pubsub = "14.0.0"
jsonrpc-ws-server = "14.0.0"
error-chain = { version = "0.12" }
log = "0.4"
cfx-types = { path = "../cfx_types" }
cfx-bytes = { path = "../cfx_bytes" }
runtime = { path = "../util/runtime" }
slab = "0.4"
cfxcore = { path = "../core" }
network = { path = "../network" }
db = { path = "../db" }
blockgen = { path = "../blockgen" }
txgen = { path = "../transactiongen" }
secret-store = { path = "../secret_store" }
primitives = { path = "../primitives" }
log4rs = "0.9.0"
rlp = "0.4.0"
keccak-hash = "0.5"
rand = "0.7.2"
kvdb-rocksdb = {path="../db/src/kvdb-rocksdb"}
tempdir = "0.3"
rustc-hex= "1.0"
threadpool = "1.0"
metrics = { path = "../util/metrics" }
delegate = { path = "../util/delegate" }
transient-hashmap = "0.4"
rand_xorshift = "0.2"
itertools = "0.9"
order-stat = "0.1"
futures01 = "0.1"
futures = { version = "0.3.3", features = ["compat"] }
rayon = "1.2.0"
throttling = { path = "../util/throttling" }
tokio-timer = "0.2.13"
malloc_size_of = {path = "../util/malloc_size_of"}
random-crash = { path = "../util/random_crash" }
cfx-parameters = { path = "../core/parameters" }

[dev-dependencies]
criterion = "0.2"
cfx-parameters = { path = "../core/parameters" }

[[bench]]
name = "benchmark"
harness = false
