[package]
name = "client"
version = "2.0.2"
edition = "2018"

[dependencies]
bigdecimal = "0.1.0"
num-bigint = "0.2.6"
mio = "0.6.8"
clap = "2"
textwrap = "0.9"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
parking_lot = "0.11"
io = { path = "../util/io" }
cfxkey = { path = "../accounts/cfxkey" }
cfxcore-accounts = { path = "../accounts" }
cfxstore = { path = "../accounts/cfxstore" }
cfx-internal-common = { path = "../core/internal_common" }
cfx-executor = { path = "../core/executor" }
cfx-execute-helper = { path = "../core/execute-helper" }
cfx-statedb = { path = "../core/statedb" }
cfx-storage = { path = "../core/storage" }
cfx-vm-types = { path = "../core/vm-types" }
app_dirs = "1.2.1"
dir = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1"  }
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git", rev="b523017108bb2d571a7a69bd97bc406e63bc7a9d" }
jsonrpc-core = "15.1.0"
jsonrpc-tcp-server = "15.1.0"
jsonrpc-http-server = "15.1.0"
jsonrpc-derive = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-pubsub = "15.1.0"
jsonrpc-ws-server = "15.1.0"
error-chain = { version = "0.12" }
lazy_static = "1.4"
log = "0.4"
cfx-types = { path = "../cfx_types" }
cfx-addr = { path = "../cfx_addr/rust" }
cfx-bytes = { path = "../cfx_bytes" }
runtime = { path = "../util/runtime" }
slab = "0.4"
cfxcore = { path = "../core" }
network = { path = "../network" }
db = { path = "../db" }
blockgen = { path = "../blockgen" }
txgen = { path = "../transactiongen" }
secret-store = { path = "../secret_store" }
primitives = { path = "../primitives" }
log4rs = { version = "1.2.0", features = ["background_rotation", "gzip"] }
rlp = "0.4.0"
keccak-hash = "0.5"
rand = "0.7.2"
rand_08 = {package = "rand", version = "0.8.0"}
kvdb-rocksdb = {path="../db/src/kvdb-rocksdb"}
tempdir = "0.3"
rustc-hex = "2.1"
threadpool = "1.0"
metrics = { path = "../util/metrics" }
delegate = { path = "../util/delegate" }
transient-hashmap = "0.4"
rand_xorshift = "0.2"
itertools = "0.9"
order-stat = "0.1"
futures01 = "0.1"
futures = { version = "0.3.3", features = ["compat"] }
rayon = "1.2.0"
throttling = { path = "../util/throttling" }
tokio = { version = "1.6", features = ["full"] }
tokio-stream = "0.1.4"
tokio-timer = "0.2.13"
malloc_size_of = {path = "../util/malloc_size_of"}
random-crash = { path = "../util/random_crash" }
cfx-parameters = { path = "../core/parameters" }
strum = "0.20"
strum_macros = "0.20"
crash-handler = { path = "../core/src/pos/common/crash-handler" }
cached-pos-ledger-db = { path = "../core/src/pos/storage/cached-pos-ledger-db" }
pos-ledger-db = { path = "../core/src/pos/storage/pos-ledger-db" }
diem-channel = {path = "../core/src/pos/common/channel", package = "channel"}
diem-config = { path = "../core/src/pos/config" }
diem-crypto = { path = "../core/src/pos/crypto/crypto" }
diem-logger = { path = "../core/src/pos/common/logger" }
diem-metrics = { path = "../core/src/pos/common/metrics" }
diem-secure-storage = { path = "../core/src/pos/secure/storage" }
diem-temppath = { path = "../core/src/pos/common/temppath" }
diem-time-service = { path = "../core/src/pos/common/time-service" }
diem-types = { path = "../core/src/pos/types" }
pow-types = {path = "../core/src/pos/types/pow-types" }
executor-types = { path = "../core/src/pos/types/executor-types" }
executor = { path = "../core/src/pos/consensus/executor" }
fail = "0.4.0"
storage-interface = { path = "../core/src/pos/storage/storage-interface" }
consensus-types = {path = "../core/src/pos/consensus/consensus-types"}
anyhow = "1.0.38"
rpassword = "5.0.1"
static_assertions = "1.1.0"
parity-version = {path = "../util/version"}
solidity-abi = {path="../util/solidity-abi"}
bls-signatures = {git = "https://github.com/Conflux-Chain/bls-signatures.git", rev = "e7d9119eb285607d5134d40efd89555c41d73160", default-features = false, features = ["multicore"]} 

[dev-dependencies]
criterion = "0.3"
cfx-parameters = { path = "../core/parameters" }
cfx-executor = { path = "../core/executor", features = ["testonly_code"] }
serial_test = "0.5.1"

[features]
# Unfortunately cfg test attributes doesn't work across crates,
# we have to define a feature for test code.
# https://users.rust-lang.org/t/cfg-test-doesnt-propagate-to-external-crates/13046
testonly_code = []
u64_mpt_db_key = ["cfx-storage/u64_mpt_db_key"]

[[bench]]
name = "benchmark"
harness = false
