[package]
description = "Conflux core library"
homepage = "http://www.conflux-chain.org"
license = "GPL-3.0"
name = "cfxcore"
version = "1.1.2"
edition = "2018"

[dependencies]
bit-set = "0.4"
bn = { git = "https://github.com/paritytech/bn", default-features = false, rev="635c4cdd560bc0c8b262e6bf809dc709da8bcd7e" }
byteorder = "1.0"
cfxkey = { path = "../accounts/cfxkey" }
cfx-addr = { path = "../cfx_addr/rust" }
cfx-bytes = { path = "../cfx_bytes" }
cfx-internal-common = { path = "internal_common" }
cfx-parameters = { path = "parameters" }
cfx-statedb = { path = "statedb" }
cfx-state = { path = "state" }
cfx-storage = { path = "storage", optional = true }
cfx-types = { path = "../cfx_types" }
cfx-utils = { path = "../cfx_utils" }
clap = "2"
dag = {path = "../util/dag"}
derivative = "2.0.2"
db = { path = "../db" }
either = "1.5.3"
error-chain = { version = "0.12", default-features = false }
fallible-iterator = "0.2"
fs_extra = "1.1.0"
futures = {version="0.3.3", features = ["compat"]}
hashbrown = "0.7.1"
hibitset = { path = "../util/hibitset" }
itertools = "0.9"
io = { path = "../util/io" }
jsonrpc-core = "15.1.0"
keccak-hash = "0.5"
kvdb = "0.4"
kvdb-rocksdb = {path="../db/src/kvdb-rocksdb"}
lazy_static = "1.4"
link-cut-tree = { path = "../util/link-cut-tree" }
log = "0.4"
log4rs = { version = "1.0.0", features = ["background_rotation", "gzip"] }
lru_time_cache = "0.9.0"
malloc_size_of = {path = "../util/malloc_size_of"}
malloc_size_of_derive = {path = "../util/malloc_size_of_derive"}
memmap = "0.6"
memoffset = "0.5.1"
memory-cache = { path = "../util/memory-cache" }
metrics = { path = "../util/metrics" }
network = { path = "../network" }
num = "0.2"
num-traits = { version = "0.2.8", default-features = false }
parity-crypto = "0.3.0"
parking_lot = "0.11"
primal = "0.2.3"
primitives = { path = "../primitives" }
priority-send-queue = { path = "../util/priority-send-queue" }
prometheus = { version = "0.7.0", default-features = false }
rand = "0.7"
rand_chacha="0.2.1"
rand_xorshift="0.2"
random-crash = { path = "../util/random_crash" }
rayon = "1.0"
rlp = "0.4.0"
rlp_derive = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1"  }
rustc-hex = "2.1"
secret-store = { path = "../secret_store" }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
siphasher = "0.3"
slab = "0.4"
solidity-abi = {path="../util/solidity-abi"}
sqlite = "0.25"
sqlite3-sys = "0.12"
static_assertions = "1.1.0"
strfmt = "0.1"
tempdir = "0.3"
threadpool = "1.0"
throttling = { path = "../util/throttling" }
toml = "0.4"
tokio = { version = "0.2", features = ["full"] }
tokio-timer = "0.2.13"
unexpected = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1"  }
strum = "0.20"
strum_macros = "0.20"
smart-default = "0.6.0"

[dev-dependencies]
criterion = "0.2"
cfx-storage = { path = "storage", features = ["testonly_code"] }
tokio = { version = "0.2.11", features = ["time"] }

[dependencies.parity-util-mem]
version = "0.5"
default-features = false

[features]
default = ["cfx-storage"]
# Unfortunately cfg test attributes doesn't work across crates,
# we have to define a feature for test code.
# https://users.rust-lang.org/t/cfg-test-doesnt-propagate-to-external-crates/13046
testonly_code = []
