[package]
name = "network"
version = "0.1.0"
edition = "2018"

[dependencies]
mio = "0.6.8"
parking_lot = "0.6"
log = "0.3"
slab = "0.2"
io = { path = "../util/io" }
error-chain = { version = "0.12", default-features = false }
bytes = "0.4"
rlp = "0.3.0"
rlp_derive = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
ipnetwork = "0.12.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
cfx-types = { path = "../cfx_types" }
cfx-bytes = { path = "../cfx_bytes" }
igd = "0.7"
libc = "0.2.7"
rand = "0.5"
parity-path = "0.1"
keccak-hash = "0.1"
enum-map = "0.4.0"
enum-map-derive = "0.4.0"
strum = "0.11.0"
strum_macros = "0.11.0"
keylib = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", package = "ethkey" }
lazy_static = "1.2.0"
byte-unit = "1.1.0"
priority-send-queue = { path = "../util/priority-send-queue" }
metrics = { path = "../util/metrics" }