[package]
name = "network"
version = "0.1.0"
edition = "2018"

[dependencies]
mio = "0.6.8"
parking_lot = "0.10"
log = "0.4"
slab = "0.4"
io = { path = "../util/io" }
error-chain = { version = "0.12", default-features = false }
bytes = "0.4"
rlp = "0.4.0"
rlp_derive = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
ipnetwork = "0.12.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
cfx-types = { path = "../cfx_types" }
cfx-bytes = { path = "../cfx_bytes" }
igd = "0.7"
libc = "0.2.66"
rand = "0.7"
parity-path = "0.1"
keccak-hash = "0.3.0"
enum-map = "0.4.0"
enum-map-derive = "0.4.0"
strum = "0.11.0"
strum_macros = "0.11.0"
ethkey = { path = "../accounts/ethkey" }
lazy_static = "1.2.0"
byte-unit = "1.1.0"
priority-send-queue = { path = "../util/priority-send-queue" }
metrics = { path = "../util/metrics" }
throttling = { path = "../util/throttling" }