[package]
description = "Conflux secret key management library"
homepage = "http://www.conflux-chain.io"
license = "GPL-3.0"
name = "secret-store"
version = "0.1.0"
edition = "2018"

[dependencies]
ethereum-types = "0.6"
keccak-hash = "0.2.0"
primitives = { path = "../primitives" }
parking_lot = "0.6"
rlp = "0.4.0"
rand = "0.5"
ethkey = { path = "../accounts/ethkey" }
rustc-hex = "1.0"
