[package]
description = "Conflux secret key management library"
homepage = "http://www.conflux-chain.io"
license = "GPL-3.0"
name = "secret-store"
version = "0.1.0"
edition = "2018"

[dependencies]
ethereum-types = "0.7"
keccak-hash = "0.3.0"
primitives = { path = "../primitives" }
parking_lot = "0.10"
rlp = "0.4.0"
rand = "0.7"
ethkey = { path = "../accounts/ethkey" }
