[package]
description = "Conflux secret key management library"
homepage = "http://www.conflux-chain.io"
license = "GPL-3.0"
name = "secret-store"
version = "0.1.0"
edition = "2018"

[dependencies]
cfx-types = { path = "../cfx_types" }
parking_lot = "0.11"
rlp = "0.4.0"
rand = "0.7"
cfxkey = { path = "../accounts/cfxkey" }
malloc_size_of_derive = {path = "../util/malloc_size_of_derive"}
malloc_size_of= {path = "../util/malloc_size_of"}
