[package]
description = "Conflux transaction generator library"
homepage = "http://www.conflux-chain.io"
license = "GPL-3.0"
name = "txgen"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2"
cfxcore = { path = "../core" }
cfx-types = { path = "../cfx_types" }
cfx-bytes = { path = "../cfx_bytes" }
hex = "0.2"
keccak-hash = "0.3.0"
primitives = { path = "../primitives" }
parking_lot = "0.10"
rlp = "0.4.0"
rand = "0.7"
secret-store = { path = "../secret_store" }
network = { path = "../network" }
ethkey = { path = "../accounts/ethkey" }
log = "0.4"
db = { path = "../db" }
toml = "0.4"
io = { path = "../util/io" }
priority-send-queue = { path = "../util/priority-send-queue" }
metrics = { path = "../util/metrics" }
lazy_static = "1.3"
parity-bytes = "0.1"