[package]
description = "Conflux transaction generator library"
homepage = "https://www.confluxnetwork.org"
license = "GPL-3.0"
name = "txgen"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2"
cfxcore = { path = "../core" }
cfx-types = { path = "../cfx_types" }
cfx-bytes = { path = "../cfx_bytes" }
primitives = { path = "../primitives" }
parking_lot = "0.11"
rlp = "0.4.0"
rand = "0.7"
rustc-hex = "2.1"
secret-store = { path = "../secret_store" }
network = { path = "../network" }
cfxkey = { path = "../accounts/cfxkey" }
log = "0.4"
db = { path = "../db" }
toml = "0.4"
io = { path = "../util/io" }
priority-send-queue = { path = "../util/priority-send-queue" }
metrics = { path = "../util/metrics" }
lazy_static = "1.4"
