[package]
description = "Conflux Keys Generator"
name = "cfxkey"
version = "0.3.0"
authors = ["Conflux Foundation"]

[dependencies]
cfx-types = { path = "../../cfx_types" }
edit-distance = "2.0"
parity-crypto = "0.4.0"
parity-secp256k1 = "0.7.0"
lazy_static = "1.4"
log = "0.4"
parity-wordlist = "1.3"
quick-error = "1.2.2"
rand = "0.7"
rustc-hex = "2.1"
serde = "1.0"
serde_derive = "1.0"
tiny-keccak = "1.4"
zeroize = "1.0.0"
malloc_size_of_derive = {path = "../../util/malloc_size_of_derive"}
malloc_size_of = {path = "../../util/malloc_size_of"}
