[package]
description = "Parity Ethereum Key Management"
name = "cfxstore"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.4"
libc = "0.2"
rand = "0.7"
cfx-types = { path = "../../cfx_types" }
cfxkey = { path = "../cfxkey" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "1.0"
tiny-keccak = "1.4"
time = "0.1.34"
parking_lot = "0.10"
parity-crypto = "0.4.0"
dir = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1"  }
smallvec = "1.4"
parity-wordlist = "1.0"
tempdir = "0.3"

[dev-dependencies]
matches = "0.1"

[lib]
