[package]
description = "Conflux Keys Generator"
name = "ethkey"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
edit-distance = "2.0"
parity-crypto = "0.4.0"
parity-secp256k1 = "0.7.0"
ethereum-types = "0.7"
lazy_static = "1.0"
log = "0.4"
parity-wordlist = "1.3"
quick-error = "1.2.2"
rand = "0.7"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
tiny-keccak = "1.4"
zeroize = "1.0.0"
