[package]
description = "Conflux Core Space Keys Generator CLI"
name = "ctxkey-cli"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license-file.workspace = true

[dependencies]
env_logger = { workspace = true }
cfxkey = { workspace = true }
panic_hook = { workspace = true }
rustc-hex = { workspace = true }
serde = { workspace = true }
threadpool = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[[bin]]
name = "cfxkey"
path = "src/main.rs"
doc = false
