[package]
description = "Parity Ethereum Key Management CLI"
name = "cfxstore-cli"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
docopt = { workspace = true }
env_logger = { workspace = true }
num_cpus = { workspace = true }
rustc-hex = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
parking_lot = { workspace = true }
cfxstore = { workspace = true }
panic_hook = { workspace = true }
dir = { workspace = true }

[[bin]]
name = "cfxstore"
path = "src/main.rs"
doc = false

[dev-dependencies]
tempdir = { workspace = true }
