[package]
description = "Parity Ethereum Key Management CLI"
name = "cfxstore-cli"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license-file.workspace = true

[dependencies]
docopt = { workspace = true }
env_logger = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
cfxstore = { workspace = true }
panic_hook = { workspace = true }
dir = { workspace = true }

[[bin]]
name = "cfxstore"
path = "src/main.rs"
doc = false

[dev-dependencies]
tempdir = { workspace = true }
