[package]
name = "conflux"
build = "build.rs"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license-file.workspace = true

[dependencies]
clap = { workspace = true, features = ["yaml"] }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
cfxstore = { workspace = true }
rpassword = { workspace = true }
#io = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true, features = ["http"] }
log = { workspace = true }
cfxcore = { workspace = true }
network = { workspace = true }
db = { workspace = true }
primitives = { workspace = true }
log4rs = { workspace = true, features = ["background_rotation", "gzip"] }
rlp = { workspace = true }
rand_08 = { workspace = true }
client = { workspace = true }
cfx-types = { workspace = true }
docopt = { workspace = true }
cfxkey = { workspace = true }
rustc-hex = { workspace = true }
env_logger = { workspace = true }
malloc_size_of = { workspace = true }
diem-crypto = { workspace = true }
diem-types = { workspace = true }
pos-ledger-db = { workspace = true }
executor = { workspace = true }                                           # used by pos-genesis-tool
storage-interface = { workspace = true }
bcs = { workspace = true }
tempdir = { workspace = true }
parity-version = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
bls-signatures = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies.jemallocator]
version = "0.3.2"
optional = true

[[bin]]
name = "consensus_bench"
path = "../../crates/cfxcore/core/benchmark/consensus/src/main.rs"

[[bin]]
name = "cfx-gen-dot"
path = "../cfx-gen-dot/main.rs"

[[bin]]
name = "pos-genesis-tool"
path = "../pos-genesis-tool/main.rs"

[features]
default = ["jemalloc-global"]
deadlock-detection = ["parking_lot/deadlock_detection"]
jemalloc-global = ["jemallocator", "malloc_size_of/jemalloc-global"]
u64-mpt-db-key = ["client/u64_mpt_db_key"]
# According to Rust's feature unification, when a feature is enabled for a dependency in the root package,
# it will be enabled across all paths depending on that package. 
# (https://doc.rust-lang.org/cargo/reference/features.html#feature-unification)
blst-portable = ["bls-signatures/blst-portable"]
